fixing navbar spacing on phone

--- a/src/Scripts/Components/Navbar/navbar.scss
+++ b/src/Scripts/Components/Navbar/navbar.scss
@@ -40,3 +40,13 @@
     color: $website-green;
   }
 }
+
+@media (max-width: 700px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    &__heading {
+      margin-bottom: 1rem;
+    }
+  }
+}
